// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check more advanced API from react-testing-library  diff snapshot for state change 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <button>
-     Click to increase: 0
+     Click to increase: 1
    </button>
  </DocumentFragment>"
`;

exports[`renders with react-testing-library welcome message checked 1`] = `
<h1
  class="App-title"
>
  Welcome to React
</h1>
`;

exports[`renders without crashing when snapshots taken with enzyme mount 1`] = `
<SampleApp>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <h1
        className="App-title"
      >
        Welcome to React
      </h1>
    </header>
    <p
      className="App-intro"
    >
      To get started, edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
  </div>
</SampleApp>
`;

exports[`renders without crashing when snapshots taken with enzyme render 1`] = `
<div
  class="App"
>
  <header
    class="App-header"
  >
    <img
      alt="logo"
      class="App-logo"
      src="logo.svg"
    />
    <h1
      class="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <p
    class="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;

exports[`renders without crashing when snapshots taken with enzyme shallow 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <p
    className="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;
